[package]
name = "rlox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name = "ast"
path = "src/ast_test.rs"

[[bin]]
name = "lox"
path = "src/main.rs"

[[bin]]
name = "wrap"
path = "src/wrap.rs"